[package]
name = "linkchecker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
scraper = "0.18"
regex = "1.10"
futures = "0.3.30"